[FM] Renombre de páginas home a catalogo

--- a/documentation/components/CatalogComponent.html
+++ b/documentation/components/CatalogComponent.html
@@ -61,7 +61,7 @@
     <h3>File</h3>
 </p>
 <p class="comment">
-    <code>src/app/pages/home/catalog.component.ts</code>
+    <code>src/app/pages/catalog/catalog.component.ts</code>
 </p>
 
 
@@ -91,19 +91,19 @@
 
             <tr>
                 <td class="col-md-3">selector</td>
-                <td class="col-md-9"><code>app-home</code></td>
+                <td class="col-md-9"><code>app-catalog</code></td>
             </tr>
 
             <tr>
                 <td class="col-md-3">styleUrls</td>
-                <td class="col-md-9"><code>./home.component.scss</code></td>
+                <td class="col-md-9"><code>./catalog.component.scss</code></td>
             </tr>
 
 
 
             <tr>
                 <td class="col-md-3">templateUrl</td>
-                <td class="col-md-9"><code>./home.component.html</code></td>
+                <td class="col-md-9"><code>./catalog.component.html</code></td>
             </tr>
 
 
@@ -187,7 +187,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/pages/home/catalog.component.ts:19</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/pages/catalog/catalog.component.ts:19</a></div>
                             </td>
                         </tr>
 
@@ -206,15 +206,15 @@
                                         <tbody>
                                                 <tr>
                                                         <td>constants</td>
-
+                                                  
                                                         <td>
                                                                         <code><a href="../injectables/ConstantsService.html" target="_self" >ConstantsService</a></code>
                                                         </td>
-
+                                                  
                                                     <td>
                                                             No
                                                     </td>
-
+                                                    
                                                 </tr>
                                         </tbody>
                                     </table>
@@ -230,7 +230,7 @@
 
 
     <section>
-
+    
     <h3 id="methods">
         Methods
     </h3>
@@ -257,7 +257,7 @@
             <tr>
                 <td class="col-md-4">
                     <div class="io-line">Defined in <a href="" data-line="26"
-                            class="link-to-prism">src/app/pages/home/catalog.component.ts:26</a></div>
+                            class="link-to-prism">src/app/pages/catalog/catalog.component.ts:26</a></div>
                 </td>
             </tr>
 
@@ -298,7 +298,7 @@
             <tr>
                 <td class="col-md-4">
                     <div class="io-line">Defined in <a href="" data-line="31"
-                            class="link-to-prism">src/app/pages/home/catalog.component.ts:31</a></div>
+                            class="link-to-prism">src/app/pages/catalog/catalog.component.ts:31</a></div>
                 </td>
             </tr>
 
@@ -316,7 +316,7 @@
     </table>
 </section>
     <section>
-
+    
         <h3 id="inputs">
             Properties
         </h3>
@@ -341,7 +341,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/pages/home/catalog.component.ts:16</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/pages/catalog/catalog.component.ts:16</a></div>
                             </td>
                         </tr>
 
@@ -369,7 +369,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/pages/home/catalog.component.ts:13</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/pages/catalog/catalog.component.ts:13</a></div>
                             </td>
                         </tr>
 
@@ -397,7 +397,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/pages/home/catalog.component.ts:19</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/pages/catalog/catalog.component.ts:19</a></div>
                             </td>
                         </tr>
 
@@ -425,7 +425,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/pages/home/catalog.component.ts:18</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/pages/catalog/catalog.component.ts:18</a></div>
                             </td>
                         </tr>
 
@@ -444,9 +444,9 @@ import { FilterListModel } from &#x27;../../models/filter-list.model&#x27;;
 import { ConstantsService } from &#x27;../../services/constants.service&#x27;;
 
 @Component({
-  selector: &#x27;app-home&#x27;,
-  templateUrl: &#x27;./home.component.html&#x27;,
-  styleUrls: [&#x27;./home.component.scss&#x27;],
+  selector: &#x27;app-catalog&#x27;,
+  templateUrl: &#x27;./catalog.component.html&#x27;,
+  styleUrls: [&#x27;./catalog.component.scss&#x27;],
 })
 export class CatalogComponent implements OnInit {
   // Lista de filtros para el sidebar
@@ -557,7 +557,7 @@ export class CatalogComponent implements OnInit {
 
     <div class="tab-pane fade " id="c-styleData">
                 <p class="comment">
-                    <code>./home.component.scss</code>
+                    <code>./catalog.component.scss</code>
                 </p>
                 <pre class="line-numbers"><code class="language-scss">@import &#x27;variables&#x27;;
 
@@ -604,7 +604,7 @@ export class CatalogComponent implements OnInit {
     padding: 20px 0 20px 6px;
 
     @media only screen and (min-width: 1280px) {
-      margin: 20px 0 0 30px;
+      margin: 20px 0 -45px 30px;
       border-radius: 5px;
       background: #f4f4f4;
     }
@@ -666,7 +666,7 @@ export class CatalogComponent implements OnInit {
         font-weight: 900;
         border: none;
         font-size: 16px;
-        top: 12px;
+        top: 14px;
         left: 12px;
       }
 
@@ -897,7 +897,7 @@ export class CatalogComponent implements OnInit {
         </div>
     </div>
 
-
+    
 </div>
 
 <script src="../js/libs/vis.min.js"></script>
@@ -905,9 +905,9 @@ export class CatalogComponent implements OnInit {
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
         var COMPONENT_TEMPLATE = '<div><div class="main-content">  <!-- Filter List Mobile -->  <section class="md-filter" (click)="toggleFilterList()">    <i class="fas fa-sort-amount-down"></i>    <span class="filter-label">      Filtros    </span>  </section>  <!-- End Filter List Mobile -->  <!-- Sidebar -->  <aside *ngIf="showFilterList">    <div class="filter-list" *ngFor="let list of filterList">      <h2>{{ list.listName }}</h2>      <ul class="menu-list">        <li *ngFor="let opts of list.options; let i = index">          <input type="radio" id="{{ list.listId }}-{{ opts.id }}" name="{{ list.listId }}" value="{{ opts.id }}" [checked]="i === 0" />          <label for="{{ list.listId }}-{{ opts.id }}">{{ opts.label }}</label>        </li>      </ul>    </div>  </aside>  <!-- End Sidebar -->  <!-- Main -->  <main>    <!-- Header Catalog -->    <section class="category-title">      <h1>Todos</h1>      <h6>En Tienda Claro encuentras el celular que se ajuste a ti, elige el tuyo y ¡Cómpralo Ahora!</h6>    </section>    <!-- End Header Catalog -->    <!-- Product List -->    <section class="catalog-list">      <ng-container *ngFor="let device of deviceList">        <a [routerLink]="device.productUrl">          <div class="devices">            <div class="device-title">              <div class="info">                <span class="brand">{{ device.brand }}</span>                <span class="item-name">{{ device.deviceName }}</span>              </div>            </div>            <div class="device-image">              <div class="image">                <img alt="{{ device.deviceName }}" src="{{ device.deviceImgSrc }}" />              </div>              <div class="price">                <div class="modality">                  <span>{{ device.modality }}</span>                </div>                <div class="value">                  <span class="payment-value">{{ device.price.paymentValue }}</span>                  <span class="payment-type">{{ device.price.paymentType }}</span>                </div>              </div>            </div>            <div class="device-plan">              <span                ><strong>{{ device.price.paymentValue }}</strong                >Precio del equipo</span              >              <span>Plan Max Ilimitado {{ device.plan }}</span>            </div>            <div class="tag-online" *ngIf="device.onlyOnline">              <img src="https://static.claro.com.pe/img/otros/EtiquetaSoloOnline.png" width="72" />            </div>          </div>        </a>      </ng-container>    </section>    <!-- End Product List -->  </main>  <!-- End Main --></div></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'HeaderComponent', 'selector': 'app-header'},{'name': 'HomeComponent', 'selector': 'app-catalog'},{'name': 'ProductComponent', 'selector': 'app-product'}];
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'CatalogComponent', 'selector': 'app-catalog'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'HeaderComponent', 'selector': 'app-header'},{'name': 'ProductComponent', 'selector': 'app-product'}];
     var DIRECTIVES = [];
-    var ACTUAL_COMPONENT = {'name': 'HomeComponent'};
+    var ACTUAL_COMPONENT = {'name': 'CatalogComponent'};
 </script>
 <script src="../js/tree.js"></script>
 
@@ -920,7 +920,7 @@ export class CatalogComponent implements OnInit {
 
 
 
-
+                   
 
 
 
