--- a/documentation/components/AppComponent.html
+++ b/documentation/components/AppComponent.html
@@ -247,7 +247,7 @@ export class AppComponent {
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
         var COMPONENT_TEMPLATE = '<div><!-- NavBar --><app-header></app-header><!-- End NavBar --><router-outlet></router-outlet><!-- Footer--><app-footer></app-footer><!-- End Footer --></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'HeaderComponent', 'selector': 'app-header'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'ProductComponent', 'selector': 'app-product'}];
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'CatalogComponent', 'selector': 'app-catalog'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'HeaderComponent', 'selector': 'app-header'},{'name': 'ProductComponent', 'selector': 'app-product'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'AppComponent'};
 </script>
