--- a/src/app/pages/product/product.component.scss
+++ b/src/app/pages/product/product.component.scss
@@ -160,31 +160,31 @@
     @media only screen and (min-width: 1280px) {
       height: 425px;
     }
-  }
-}
 
-::ng-deep .owl-carousel .owl-item {
-  width: 250px;
-  margin: auto;
-  height: 250px;
+    &::ng-deep .owl-carousel .owl-item {
+      width: 250px;
+      margin: auto;
+      height: 250px;
 
-  @media only screen and (min-width: 1280px) {
-    height: 440px;
-    margin: auto;
-    width: 440px;
-  }
+      @media only screen and (min-width: 1280px) {
+        height: 440px;
+        margin: auto;
+        width: 440px;
+      }
 
-  img {
-    width: auto;
-    height: 100%;
-    margin: auto;
-  }
+      img {
+        width: auto;
+        height: 100%;
+        margin: auto;
+      }
 
-  .slide {
-    height: 250px;
+      .slide {
+        height: 250px;
 
-    @media only screen and (min-width: 1280px) {
-      height: 440px;
+        @media only screen and (min-width: 1280px) {
+          height: 440px;
+        }
+      }
     }
   }
 }
