--- a/src/app/pages/catalog/catalog.component.html
+++ b/src/app/pages/catalog/catalog.component.html
@@ -74,3 +74,111 @@
   </main>
   <!-- End Main -->
 </div>
+
+<!-- Footer para Home y Catalogo -->
+<div>
+  <div class="terms" (click)="toggleTermsDetail()">
+    <i class="fas fa-file-alt"></i>
+    Ver términos y condiciones
+  </div>
+  <div class="terms-detail" *ngIf="showTermsDetail">
+    <p>
+      DURANTE EL ESTADO DE EMERGENCIA DECRETADO POR EL GOBIERNO PERUANO, NUESTRA TIENDA VIRTUAL REGISTRARÁ TUS SOLICITUDES DE COMPRA PARA
+      QUE PUEDAN SER ATENDIDAS TAN PRONTO TERMINE LA EMERGENCIA #YoMeQuedoEnCasa
+    </p>
+    <p>&nbsp;</p>
+    <p><strong>Consideraciones - Router OLO Portatil MF920V:</strong></p>
+    <p>
+      Requisitos del Sistema: Windows XP SP3 / Vista / 7 / 8 Mac OS X 10.5 / 10.6 / 10.7 / 10.8. Frecuencia: 2.5 – 2.6 GHz, BW: 10Mhz.
+      Alcance de WIFI: de 10 a 15 metros como máximo en ambientes exteriores. El alcance de WIFI se ve reducido en interiores. Cargador USB.
+      Wi-Fi inalámbrico de 300Mbps. La señal WIFI atraviesa hasta 1 pared, dentro de un mismo domicilio. No se puede garantizar alcance de
+      señal WIFI de un piso a otro. Recuerda que a mayores conexiones en simultáneo puede disminuir el rendimiento de tu router.
+    </p>
+    <p>&nbsp;</p>
+    <p><strong>Condiciones aplicables a los planes Max Ilimitados:</strong></p>
+    <p>
+      Los planes MAX Ilimitados 65.00, 75.00, 85.00, 105.00, 125.00, 159.90, 189.90 y 289.90 son para uso personal del cliente, siendo
+      condición esencial que los minutos, SMS y datos ilimitados no sean utilizados para comercialización, reventa, uso que no sean en otros
+      dispositivos celulares móviles, y que no se desnaturalice el uso personal del servicio.
+    </p>
+    <p>
+      El internet ilimitado no podrá ser utilizado para realizar telemetría, proxys, Peer2Peer, aplicaciones informativas, o similares. En
+      cualquier caso, América Móvil Perú S.A.C. se reserva el derecho de tomar las acciones regulatorias contempladas en la normativa
+      vigente, por el incumplimiento de las condiciones pactadas con el cliente. Si el cliente requiere utilizar algunos de los servicios
+      antes descritos, podrá hacer uso de ellos contratando de paquetes adicionales de la oferta vigente. Ver consideraciones&nbsp;<a
+        href="https://www.claro.com.pe/personas/movil/postpago/planes-max/consideraciones/"
+        >aquí</a
+      >&nbsp;
+    </p>
+    <p>&nbsp;</p>
+    <p><strong>Consideraciones generales de la&nbsp;Tienda</strong></p>
+    <p>
+      Precio válido del: 01/04/2020 al 25/04/2020 y/o hasta agotar stock y no incluyen cargo fijo mensual de Plan Postpago. Sujeto a
+      evaluación crediticia que podría requerir el pago de rentas adelantadas. Stock mínimo en web: 15 equipos por modelo. Máximo 1
+      accesorio por cada equipo. El color del accesorio es al azar.&nbsp;Claro no se responsabiliza por el funcionamiento de los accesorios.
+      Sujeto a cobertura de entrega.&nbsp;
+    </p>
+    <p>
+      Precios para renovación Postpago: aplica con acuerdo de equipos vencido. Precios válidos solo en catalogo.claro.com.pe. Pago
+      únicamente con tarjeta Visa o Mastercard, no se acepta efectivo. Entrega de equipos sólo vía delivery en algunas zonas de Lima
+      Metropolitana, sujeto a cobertura de entregas. Equipos con tecnología 4GLTE: Velocidad mínima en cobertura 4G LTE: 1.2Mbps de bajada.
+      Requiere chip 4G LTE y plan compatible. Consulta mapa de cobertura y restricciones en&nbsp;<a
+        href="http://www.claro.com.pe/personas/movil/4g-lte/"
+        >http://www.claro.com.pe/personas/movil/4g-lte/</a
+      >. Color mostrado en la página es referencial. Válido para personas naturales y personas con RUC 10 y RUC 20 que solo posean un
+      representante legal. Precios para Portabilidad Postpago: Válidos para líneas con más de 9 meses en el operador cedente.
+    </p>
+    <p>&nbsp;</p>
+    <p><strong>Consideraciones Promoción Accesorios:</strong></p>
+    <p>
+      Vigencia: Desde el 11.02.2020 al 16.04.2020 y/o hasta agotar stock. Válido para Alta, Renovación, Migración y Portabilidad. Válido en
+      Venta al Contado con acuerdo de equipos a 12 o 18 meses; como en Venta en Cuotas a 12 o 18 cuotas mensuales. Máximo 2 equipos por
+      cliente. El cliente recibirá sólo 1 accesorio por equipo comprado. No aplica para cliente Corporativos. Delivery de equipo válido sólo
+      en Lima Metropolitana y sujeto a cobertura. Sujeto a evaluación crediticia. Claro no se responsabiliza por el funcionamiento de los
+      accesorios. Accesorios de la promoción Audifonos Freebuds 3, Wacht GT2 Latona, Wacht GT2 Diana y Parlante CM51. Por la compra de los
+      siguientes equipos Huawei P30 Lite, Huawei P30, Huawei P30 Pro y Huawei Nova 5T en cualquier plan Prepago o Postpago
+    </p>
+    <p>&nbsp;</p>
+    <p><strong>Consideraciones de accesorio promocionales de tienda virtual:</strong></p>
+    <p>
+      Vigencia desde el<strong>&nbsp;01.03.2020 al 25.04.2020 y/o hasta agotar stock.</strong> Delivery de equipo más accesorio promocional,
+      <strong>válido sólo en Lima Metropolitana y sujeto a cobertura.</strong> Stock mínimo de accesorios Earbuds Sport, Bluetooth
+      Speaker&nbsp; AM08,&nbsp;Wireless Charger Stand, Parlante Perú,&nbsp;Galaxy Fit,&nbsp; Audífonos Free Buds Lite,&nbsp;Wireless Charger
+      Huawei&nbsp;<strong>10 unidades.</strong> El color del accesorio es al azar. Claro no se responsabiliza por el funcionamiento de los
+      accesorios.
+    </p>
+    <p><strong>Delivery de equipo&nbsp;sujeto a cobertura*</strong></p>
+    <p>
+      Revisa las condiciones de garantía de equipos comercializados por Claro&nbsp;<a
+        href="http://www.claro.com.pe/personas/movil/garantia_equipos/"
+        >aquí</a
+      >&nbsp;
+    </p>
+    <p>
+      Revisa las condiciones de los planes Max ilimitados&nbsp;<a
+        title="aquí"
+        href="https://www.claro.com.pe/personas/movil/postpago/planes-max/"
+        >aquí</a
+      >&nbsp;
+    </p>
+    <p><strong>Consideraciones Portabilidad y Renovación Exclusiva (sin cuotas y con cuotas)</strong></p>
+    <p>
+      Portabilidad Exclusiva: Precio válido del 01/04/2020 hasta&nbsp;el 25/04/2020. Válido para clientes que tengan más de 9 meses en el
+      operador cedente y sujeto a evaluación crediticia.
+    </p>
+    <p>
+      Renovación Exclusiva: Precio válido del 01/04/2020 hasta&nbsp;el 25/04/2020. Válido para clientes con más de 18 meses o más de
+      antigüedad y sujeto a evaluación crediticia. Solo aplica si el cliente mantiene su cargo fijo o lo incrementa.
+    </p>
+    <p>&nbsp;</p>
+    <p>&nbsp;<strong>Condiciones Apple TV+&nbsp;</strong></p>
+    <p>
+      <a href="https://static.claro.com.pe/img/otros/terminos-y-condiciones-apple-tv.pdf" target="_blank"
+        >Revisa aquí las condiciones generales</a
+      >
+    </p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+  </div>
+</div>
+<!-- Fin Footer para Home y Catalogo -->
