--- a/src/app/pages/catalog/catalog.component.scss
+++ b/src/app/pages/catalog/catalog.component.scss
@@ -315,3 +315,35 @@
 
   /* ---------- End Catalog ---------- */
 }
+
+/* ---------- Footer para Home y Catalogo ---------- */
+
+.terms {
+  font-size: 16px;
+  font-weight: 400;
+  cursor: pointer;
+  margin-left: 20px;
+
+  i {
+    color: #ee122c;
+    font-size: 14px;
+    margin-bottom: 10px;
+  }
+}
+
+.terms-detail {
+  margin-left: 20px;
+
+  a {
+    font-size: 12px;
+  }
+
+  p {
+    color: #999999;
+    font-size: 12px;
+    padding: 0 0 10px 0;
+    margin: 0;
+  }
+}
+
+/* ---------- Fin Footer para Home y Catalogo ---------- */
