--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -288,4 +288,13 @@
     </div>
   </section>
   <!-- End Product Detail -->
+
+  <!-- Footer para producto -->
+  <div class="footer-product">
+    <div class="footer-product-content">
+      <span> Consideraciones </span>
+      <i class="fas fa-chevron-right"> </i>
+    </div>
+  </div>
+  <!-- Fin Footer para producto -->
 </main>
