--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -30,7 +30,7 @@
     </div>
   </div>
   <div class="logo">
-    <a href="/">
+    <a href="/home">
       <img src="https://catalogo.claro.com.pe/img/logo-tienda-prepago-blanco.png" alt="Tienda Claro Online Oficial" />
     </a>
   </div>
