[FM] Ajuste de estilos en el Home y comportamiento de page-scroll
Cambios:
* Se agrega función para restaurar la position del scroll en cada página.
* Se ajustan estilos para el tamaño de las marcas en el home.
* Se desabilita el autoplay para el segundo carousel del home.

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -30,7 +30,7 @@
     </div>
   </div>
   <div class="logo">
-    <a href="/home">
+    <a routerLink="/">
       <img src="https://catalogo.claro.com.pe/img/logo-tienda-prepago-blanco.png" alt="Tienda Claro Online Oficial" />
     </a>
   </div>
@@ -39,7 +39,7 @@
       <ul>
         <ng-container *ngFor="let item of menuList">
           <li>
-            <a href="{{ item.itemUrl }}">{{ item.itemLabel }}</a>
+            <a routerLink="{{ item.itemUrl }}">{{ item.itemLabel }}</a>
           </li>
         </ng-container>
       </ul>
