[FM] Integración con implementación de registro de pedido

--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -164,7 +164,7 @@
     </section>
 
     <section class="product-buy-content">
-      <button type="submit"><i class="fas fa-shopping-cart"></i> COMPRAR</button>
+      <button type="submit" (click)="registroPersona()"><i class="fas fa-shopping-cart"></i> COMPRAR</button>
       <span>Precios sujetos a evaluación crediticia</span>
     </section>
   </section>
