--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
-<!-- NavBar -->
-<app-header></app-header>
-<!-- End NavBar -->
-
-<router-outlet></router-outlet>
-
-<!-- Footer-->
-<app-footer></app-footer>
-<!-- End Footer -->
+<div id="page-container">
+  <!-- NavBar -->
+  <app-header></app-header>
+  <!-- End NavBar -->
+  <div id="content-wrap">
+    <router-outlet></router-outlet>
+  </div>
+  <!-- Footer-->
+  <app-footer></app-footer>
+  <!-- End Footer -->
+</div>
